// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
Error 1/1

  1 |
> 2 |         query test($v: String, $t: String, $v: String) {
    |                                            ^^ Operation variable "v" defined multiple times
  3 |           id
  4 |         }
  5 |       
`;

exports[` 2`] = `
Error 1/1

  1 |
  2 |         query test {
> 3 |           users(first: 100, after: 10, filter: "test", first: 50) {
    |                                                        ^^^^^ Field argument "first" defined multiple times
  4 |             id
  5 |           }
  6 |         }
  7 |       
`;

exports[` 3`] = `
Error 1/1

   1 |
   2 |         query test {
   3 |           users {
   4 |             id
   5 |             name
   6 |             email
>  7 |             name
     |             ^^^^ Field "name" defined multiple times
   8 |           }
   9 |         }
  10 |       
`;

exports[` 4`] = `
Error 1/1

   1 |
   2 |         query test {
   3 |           users {
   4 |             id
   5 |             name
   6 |             email
>  7 |             email: somethingElse
     |             ^^^^^ Field "email" defined multiple times
   8 |           }
   9 |         }
  10 |       
`;
